--- a/nlp_env.yml
+++ b/nlp_env.yml
@@ -27,6 +27,8 @@ dependencies:
   # - jupyter-ai
   # - spacy
   - optuna
+  - pyyaml
+  - plotly
   - pip
   - pip:
     # - tensorflow-macos>=2.11
