📚 Add .DS_Store to .gitignore to prevent macOS system files from being tracked

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ __pycache__/
 **/*.ipynb
 **/*.pyc
 
+.DS_Store
+
 # Jupyter Notebook checkpoints anywhere in the codebase
 **/.ipynb_checkpoints
 
