--- a/nlp_env.yml
+++ b/nlp_env.yml
@@ -1,49 +1,34 @@
 name: nlp_env
 channels:
   - pytorch
+  - huggingface
   - conda-forge
+  - defaults
 
 dependencies:
-  - python=3.11  ## specify desired version
-  - numpy
-  - pandas
-  # - scipy<2.0.0
-  - scikit-learn
-  # - polars
-  # - grpcio
-  # - spacy
-  - pytorch
-  # - sentencepiece
-  # - setfit
-  # - bertopic
-  - seaborn
-  - jupyterlab 
-  - ipywidgets
-  # - nltk
-  # - numba>=0.56.2
-  # - umap-learn
-  # - fuzzywuzzy
-  # - gensim
-  # - jupyter-ai
-  # - spacy
-  - optuna
-  - pyyaml
-  - plotly
+  - python=3.11
   - pip
+  - pytorch>=2.0.0
+  - torchvision
+  - torchaudio
+  # - cudatoolkit>=11.7  # If using GPU
+  - transformers
+  - scikit-learn
+  - pandas
+  - numpy
+  - tqdm
+  - matplotlib
+  - seaborn
+  - ipython
+  - jupyter
   - pip:
-    # - tensorflow-macos>=2.11
-    # - tensorflow-metal>=0.7.0
-    # - pytorch-transformers 
-    - transformers[torch]
-    # - tensorboard
-    # - scipy<1.13
-    # - scipy
-    # - pretzelai
+    - optuna>=3.0.0
+    - sentence-transformers
+    # - wandb  # Optional: for experiment tracking
 
 variables:
-  # PYTORCH_ENABLE_MPS_FALLBACK: 1
   TOKENIZERS_PARALLELISM: false
-  # PYTORCH_MPS_HIGH_WATERMARK_RATIO: 0.0
+
 prefix: bert_local_dev
 
 # cd $CONDA_ENVS
@@ -51,7 +36,6 @@ prefix: bert_local_dev
 # conda env remove --name nlp_env -y
 # conda update -n base -c conda-forge conda
 # conda env remove --name nlp_env -y && conda env create --file nlp_env.yml && conda activate nlp_env
-# say "Job Finished"
 
 
 
